# video-downloader

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: release.yml
scripts/: build_exe.ps1
src/video_downloader/: __init__.py  __main__.py  downloader.py  ui.py
